--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,11 @@ edition = "2018"
 travis-ci = { repository = "OSSystems/find-binary-version-rs" }
 
 [dependencies]
+byteorder = "1"
+lazy_static = "1"
+regex = "1"
+
+[dev-dependencies]
+exitfailure = "0.5"
+failure = "0.1"
+structopt = "0.2"
