--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ travis-ci = { repository = "OSSystems/find-binary-version-rs" }
 [dependencies]
 byteorder = "1"
 regex = "1"
+flate2 = "1"
 
 [dev-dependencies]
 exitfailure = "0.5"
