--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,8 @@ travis-ci = { repository = "OSSystems/find-binary-version-rs" }
 
 [dependencies]
 byteorder = "1"
+compress-tools = "0.4"
 regex = "1"
-flate2 = "1"
 
 [dev-dependencies]
 exitfailure = "0.5"
