--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,10 +15,12 @@ edition = "2018"
 travis-ci = { repository = "OSSystems/find-binary-version-rs" }
 
 [dependencies]
-byteorder = "1"
-compress-tools = "0.12"
+async-trait = "0.1"
+compress-tools = { version = "0.12", features = ["tokio_support"] }
 regex = "1"
+tokio = { version = "1", features = ["io-util"] }
 
 [dev-dependencies]
 anyhow = "1"
 structopt = "0.3"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
